[build][java] KUDU-3681: Move to JDK17
This change aims to support building and running the java bits with Java 17.

The changes:
* natively set release version when building with Java 9+
* use 'org.apache.tomcat:annotations-api' as a compileOnly dependency for the
  'javax.annotations' package, since that was deprecated in Java 9
* upgrade jacoco dependency from 0.8.6 to 0.8.8 for Java17 compatibility
* upgrade the Hive dependency to 4.1.0
* after this change, it is no longer possible to compile Kudu java bits
  with JDK versions lower than 17

Change-Id: I1f73c0d3a79e1c37b12a173881273b4b68d718b3
Reviewed-on: http://gerrit.cloudera.org:8080/23259
Reviewed-by: Marton Greber <greber.mx@gmail.com>
Tested-by: Marton Greber <greber.mx@gmail.com>
Reviewed-by: Gabriella Lotz <lotzgabriella@gmail.com>